[project]
name = "traffic_rl"
version = "0.1.0"
description = "Traffic Signal RL OpenEnv Environment"
authors = [{name = "Antigravity"}]
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "openenv",
    "openenv-core",
    "requests",
    "openai"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
